<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="335dp"
        android:scaleType="fitXY"
        android:src="@drawable/dialogbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancelTextView"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/yellow_button"
        android:gravity="center"
        android:shadowColor="#666"
        android:shadowDx="-2"
        android:shadowDy="-3"
        android:shadowRadius="3"
        android:text="@string/play_again_button"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/quitTextView"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/red_button"
        android:gravity="center"
        android:shadowColor="#666"
        android:shadowDx="-2"
        android:shadowDy="-3"
        android:shadowRadius="3"
        android:text="@string/main__menu_button"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelTextView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/alertback"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <ImageView
            android:id="@+id/winnerImageView"
            android:layout_width="wrap_content"
            android:layout_height="136dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_weight="3"
            android:paddingLeft="20dp"
            android:src="@drawable/xturn"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/carter_one"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="6.6sp"
            android:paddingRight="15dp"
            android:shadowColor="#666"
            android:shadowDx="-2"
            android:shadowDy="-3"
            android:shadowRadius="3"
            android:text="@string/win_message"
            android:textColor="#ffffff"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>